--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
+    <color name="colorPrimary">#BEE47070</color>
     <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorAccent">#414948</color>
+    <color name="student_background">#BEFAD6D6</color>
+    <color name="student_message_background">#BEFFFFFF</color>
+    <color name="student_message_background_1">#D5F3C0C0</color>
+    <color name="teacher_background">#BEFAD6D6</color>
+    <color name="teacher_message_background">#BEFFFFFF</color>
+    <color name="background">#BEFFFFFF</color>
 </resources>
